--- a/src/styles/projects-view.css
+++ b/src/styles/projects-view.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  min-height: calc(100vh - 24px - var(--bottom-nav-height, 0px));
+  min-height: calc(100dvh - 24px - var(--bottom-nav-height, 0px));
   padding: 0 1rem;
   box-sizing: border-box;
 }
